[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/CharacterTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Mudman/MudmanCharacterRig.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Mudman/Walk.gd" type="Script" id=3]
[ext_resource path="res://characters/Mudman/Hurt.gd" type="Script" id=4]
[ext_resource path="res://characters/Mudman/MudmanCharacterMain.gd" type="Script" id=5]
[ext_resource path="res://characters/Hitbox.gd" type="Script" id=6]
[ext_resource path="res://characters/Mudman/Idle.gd" type="Script" id=7]
[ext_resource path="res://characters/Mudman/MudmanStateMachine.gd" type="Script" id=8]
[ext_resource path="res://characters/Mudman/spritesheets/hurt.png" type="Texture" id=9]
[ext_resource path="res://characters/AreaGroupTimeline.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=2]
radius = 31.6954
height = 127.436

[sub_resource type="CapsuleShape2D" id=3]
radius = 35.0875
height = 70.4771

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.801, 74.3964 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 37.1226, 65.5772 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.58, 18.768 )

[node name="MudmanCharacterMain" instance=ExtResource( 1 )]
script = ExtResource( 5 )
move_speed = Vector2( 200, 100 )

[node name="FSM" parent="." index="0"]
script = ExtResource( 8 )

[node name="Idle" type="Node" parent="FSM" index="0"]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="FSM" index="1"]
script = ExtResource( 3 )

[node name="Hurt" type="Node" parent="FSM" index="2"]
script = ExtResource( 4 )
hurt_duration = 0.6

[node name="MudmanCharacterRig" parent="Body" index="0" instance=ExtResource( 2 )]

[node name="Sprite" parent="Body/MudmanCharacterRig" index="0"]
position = Vector2( -15.6052, -1.91695 )
texture = ExtResource( 9 )
offset = Vector2( -49.6218, -27.5669 )
hframes = 4
frame = 3

[node name="HitboxGroup" parent="Body" index="1"]
entity_path = NodePath("../../../MudmanCharacterMain/Body")

[node name="Idle" type="Area2D" parent="Body/HitboxGroup" index="0"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxGroup/Idle" index="0"]
position = Vector2( 12.2111, -4.74876 )
shape = SubResource( 2 )

[node name="Walk" type="Area2D" parent="Body/HitboxGroup" index="1"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxGroup/Walk" index="0"]
position = Vector2( 9.49753, 5.42715 )
shape = SubResource( 3 )

[node name="Hurt1" type="Area2D" parent="Body/HitboxGroup" index="2"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxGroup/Hurt1" index="0"]
position = Vector2( -5.42715, -24.4222 )
shape = SubResource( 4 )

[node name="Hurt2" type="Area2D" parent="Body/HitboxGroup" index="3"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxGroup/Hurt2" index="0"]
position = Vector2( -20.3518, 0.678375 )
shape = SubResource( 5 )

[node name="HurtTimeline" type="Node2D" parent="Body/HitboxGroup" index="4"]
script = ExtResource( 10 )

[node name="AttackboxGroup" parent="Body" index="2"]
entity_path = NodePath("../../../MudmanCharacterMain/Body")

[node name="Terrain" type="CollisionShape2D" parent="." index="2"]
position = Vector2( -7.46237, 87.5129 )
shape = SubResource( 1 )

[editable path="Body/MudmanCharacterRig"]
